2002-09-08  Yanko Kaneti  <yaneti@declera.com>

	* configure.in: Added Hebrew (he) to ALL_LINGUAS

2002-09-04  Mikael Hallendal  <micke@codefactory.se>

	* Release 1.0.6

	* NEWS: udpated for 1.0.6

	* configure.in: 1.0.6

2002-09-03  Stanislav Brabec  <utx@penguin.cz>

	* configure.in: Added cs to ALL_LINGUAS.

2002-09-01  Marius Andreiana <mandreiana@yahoo.com>

	* configure.in: added 'ro' to ALL_LINGUAS

2002-08-29  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-window.c: removed trailing comma in the enum. Fixes
	  #91789

2002-08-28  Mikael Hallendal  <micke@codefactory.se>

	* Release 1.0.5

	* configure.in: 1.0.5

	* NEWS: Updated for 1.0.5

2002-08-27  Kristian Rietveld  <kris@gtk.org>

	* src/yelp-view-content.c (content_reader_finished_cb): don't just
	  select that path, but set the cursor at that path (fixes
	  #91609).

2002-08-23  Mikael Hallendal  <micke@codefactory.se>

	* Release 1.0.4

	* configure.in: 1.0.4, updated gtkhtml2 reqs to 2.0.2

	* NEWS: Updated for 1.0.4
	
	* src/yelp-view-content.c:
	(yelp_view_content_show_uri): Applied patch from Padraig to fix
	focus handling. Fixes #90010.

2002-08-22  Kristian Rietveld  <kris@gtk.org>
 
	* src/yelp-man.c:
	(yelp_man_free_initial_tree): also free the node itself
	(yelp_man_cleaup_initial_tree): free the initial tree structure of
	  the nodes we're freeing here. 

2002-08-21  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-html-gtkhtml2.c (html_url_requested_cb): 
	- Don't use the full base-uri for resolving relative
	links. Instead use the path part of the base-uri. Fixes #91199

2002-08-20  Ross Burton  <ross@burtonini.com>
 
	* yelp.desktop.in: 
	- Fix the desktop file so that it validates correctly.

2002-08-20  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-toc.c (toc_page_end): removed a new line before
	  the gnome2 logo.

2002-08-19  Sander Vesik <sander.vesik@sun.com>

	* stylesheets/yelp-customization.xsl:
	- make more table borders show up in the user guide
